package contract.enums;

public enum ResponseType {

    MOVE_EXECUTED,
    INVALID_MOVE,
    SUCCESS,
    CANT_CREATE_GAME,
    SERVER_ERROR,
    PLAYER_LEFT,
    GAMEWON,
    GAMELOST
}
