package core.contract;

public enum ActionType {
    STARTMULTIPLAYERGAME,
    STARTBOTGAME,
    LEAVEGAME,
    DOMOVE,
    PASSMOVE
}
