package frontend;

public enum Occupancy {

    WHITE,
    BLACK,
    EMPTY
}
